--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div id="div-box" class="QR-box">
-    <img src="/images/image-qr-code.png" alt="">
+    <img src="https://drive.google.com/file/d/1LXHZ3zF5DJw9FDAsYy10IFOF-Wae5PZz/view?usp=sharing" alt="">
     <h1>Improve your front-end skills by building projects</h1>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
